--- a/overlay/packages/apps/Settings/res/xml/hardware_keys.xml
+++ b/overlay/packages/apps/Settings/res/xml/hardware_keys.xml
@@ -35,6 +35,12 @@
             android:title="@string/navigation_keys"
             android:persistent="false" />
 
+    <com.android.settings.arrow.preferences.SystemSettingSwitchPreference
+            android:key="pixel_nav_animation"
+            android:title="@string/pixel_navbar_anim_title"
+            android:defaultValue="false"
+            android:dependency="navigation_bar_show" />
+
     <Preference
             android:title="@string/navbar_tuner_title" >
             <intent android:action="android.intent.action.MAIN"
@@ -80,6 +86,7 @@
             android:title="@string/button_timeout_title"
             android:max="30"
             settings:min="0"
+            android:defaultValue="5"
             android:persistent="false"
             android:dependency="button_backlight_enable" />
 
