--- a/overlay/packages/apps/Settings/res/xml/hardware_keys.xml
+++ b/overlay/packages/apps/Settings/res/xml/hardware_keys.xml
@@ -41,6 +41,13 @@
             android:defaultValue="false"
             android:dependency="navigation_bar_show" />
 
+    <com.android.settings.arrow.preferences.SystemSettingSwitchPreference
+            android:key="one_hand_mode_enabled"
+            android:title="@string/one_hand_mode_title"
+            android:summary="@string/one_hand_mode_summary"
+            android:dependency="navigation_bar_show"
+            android:defaultValue="false" />
+
     <Preference
             android:title="@string/navbar_tuner_title" >
             <intent android:action="android.intent.action.MAIN"
